# Calculator-App

./: CMakeLists.txt  LICENSE  build.sh
data/config/: options.cfg
src/: CMakeLists.txt  calculator.cpp
src/core/: CMakeLists.txt  Enums.cpp  Enums.hpp  Logging_Utilities.hpp  Options.cpp  Options.hpp  String_Utilities.cpp  String_Utilities.hpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  Engine_Config.cpp  Engine_Config.hpp  Session_Context.cpp  Session_Context.hpp
src/engine/allegro/: Allegro_Utilities.hpp
src/math/: CMakeLists.txt  Infix2Postfix.cpp  Infix2Postfix.hpp  Math_Utilities.hpp  Operator_Factory.cpp  Operator_Factory.hpp  Point.hpp  Postfix2Infix.cpp  Postfix2Infix.hpp  Rectangle.hpp  Size.hpp  Solver.cpp  Solver.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp
src/math/operators/: Basic_Operations.cpp  Basic_Operations.hpp  Operation_Base.cpp  Operation_Base.hpp
test/: CMakeLists.txt
test/core/: TEST_Enums.cpp
test/math/: TEST_Infix2Postfix.cpp  TEST_Point.cpp  TEST_Rectangle.cpp  TEST_Solver.cpp  TEST_Tokenizer.cpp
test/unit-test/: Unit_Test_Utilities.cpp  Unit_Test_Utilities.hpp
tic80/: calc_test.lua  calculator.lua
